--- a/.traefik.yml
+++ b/.traefik.yml
@@ -7,6 +7,6 @@ import: github.com/vtacquet/redbase-plugin
 summary: "Redirect based on SQLite database entries to use with https://hub.docker.com/r/vtacquet/redbase"
 
 testData:
-  redbaseurl: "127.0.0.1:9922"
+  redbaseurl: "redbase:9922"
   defaulturl: "https://www.tacquet.be"
 
